# uninstall_rust

./: .idea  Cargo.toml  README.md  updatesc
src/: handle_files.rs  helper.rs  lib.rs  main.rs  uninstall.rs
src/handle_files/: mod.rs
