[package]
name = "simple_scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "uninstall"
path = "src/uninstall.rs"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
resolve-path = "0.1.0"

